deployment/minikube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image-proxy
  labels:
    app: image-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: image-proxy
  template:
    metadata:
      labels:
        app: image-proxy
    spec:
      containers:
        - name: image-proxy
          image: image-proxy:1.0
          "args":
            - "-addr"
            - 0.0.0.0:8080
            - "-cache"
            - /image-proxy
            - "-baseURL"
            - http://image-service:10260/files/
            - "-whitelist"
            - image-service:10260
          resources:
            requests:
              memory: "512Mi"
              cpu: "100m"
            limits:
              memory: "1024Mi"
              cpu: "1000m"
          volumeMounts:
            - mountPath: /image-proxy
              name: cache-volume
          ports:
            - name: http-port
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /2x/status.png?token=fbsxIBmBRNff6d97jwnFfWADhFWCs3fA
              port: http-port
            initialDelaySeconds: 60
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /2x/status.png?token=fbsxIBmBRNff6d97jwnFfWADhFWCs3fA
              port: http-port
            initialDelaySeconds: 60
            periodSeconds: 3
      volumes:
        - name: cache-volume
          emptyDir: {}
