deployment/minikube/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: image-proxy
spec:
  selector:
    app: image-proxy
  ports:
    - protocol: TCP
      port: 10270
      targetPort: http-port
